2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gataxx.c (about_cb): Don't try to translate empty string.

2002-01-08  Josh Barrow  <drleary@mac.com>

	* properties.c: (show_properties_dialog):
	Let it know that it's parent is window and made it have 
	no separator just above the buttons.

2002-01-06  Josh Barrow  <drleary@mac.com>

	* properties.c: (load_properties), (apply_changes),
	(quick_moves_select), (flip_final_select), (fill_menu),
	(show_properties_dialog):
	First try at porting this to GTK_DIALOG.  No longer do 
	I believe that buttonless dialogs are the way to go.
	Also, some whitespace fixes and horrible coding style 
	fixes.

2002-01-02  Josh Barrow  <drleary@mac.com>

	* properties.c: (fill_menu):
	Change use of GtkSignalFunc to G_CALLBACK

2001-12-31  Josh Barrow  <drleary@mac.com>

	* gataxx.c: (set_bg_color): 
	Fix compile time warning.

	* properties.c: (save_properties), (apply_changes),
	(black_computer_level_select), (white_computer_level_select),
	(quick_moves_select), (flip_final_select), (animate_select),
	(apply_cb), (fill_menu), (show_properties_dialog):
	Simply the code a bit.

2001-12-29  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* clock.c: (update_clock):
	* gataxx.c: (quit_game_cb), (about_cb), (expose_event),
	(configure_event), (gui_draw_pixmap), (gui_draw_pixmap_buffer),
	(load_pixmaps), (init_new_game), (create_window), (gui_status),
	(set_bg_color), (main):
	* properties.c: (black_computer_level_select),
	(white_computer_level_select), (quick_moves_select),
	(flip_final_select), (animate_select), (set_selection),
	(fill_menu), (show_properties_dialog):

	Made to compile and run with G_DISABLE_DEPRECATED,
	GDK_DISABLE_DEPRECATEd, GTK_DISABLE_DEPRECATED, and 
	GNOME_DISABLE_DEPRECATED.  Also rewrote the preferences 
	dialog to make it instant apply. (The rewrite was initally
	required becuase gnome_properties_dialog is deprecated)

	This will most certainly make Greg happy.  ; D
