@@ -1,0 +1,482 @@
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version "1.4.0.1">
+]>
+
+<!-- =============Document Header ============================= -->
+
+<article id="index"> 
+
+ <articleinfo>
+  <title>Gataxx</title>
+  <copyright>
+   <year>2000-2002</year>
+   <holder>Ximian, Inc.</holder>
+  </copyright>
+
+  <!-- translators: uncomment this:
+
+  <copyright>
+   <year>2000</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+   -->
+
+  <!-- do not put authorname in the header except in copyright - use
+  section "authors" below -->
+
+  <legalnotice>
+   <para>
+    Permission is granted to copy, distribute and/or modify this
+    document under the terms of the <citetitle>GNU Free Documentation
+    License</citetitle>, Version 1.1 or any later version published by
+    the Free Software Foundation with no Invariant Sections, no
+    Front-Cover Texts, and no Back-Cover Texts. You may obtain a copy
+    of the <citetitle>GNU Free Documentation License</citetitle> from
+    the Free Software Foundation by visiting <ulink
+    url="http://www.gnu.org" type="http">their Web site</ulink> or by
+    writing to
+    <address>
+     Free Software Foundation, Inc.
+     <street>59 Temple Place</street> - Suite 330
+     <city>Boston</city>, <state>MA</state> <postcode>02111-1307</postcode>
+     <country>USA</country>
+    </address>
+   </para>
+  </legalnotice>
+
+  <!-- this is version of manual, not application --> <releaseinfo>
+  This is version 2.0 of the Gataxx manual.
+  </releaseinfo>
+
+ </articleinfo>
+
+ <!-- ============= Document Body ============================= -->
+
+ <!-- ============= Introduction ============================== -->
+ <sect1 id="intro">
+  <title>Introduction</title>
+
+  <para>
+   <application>Gataxx</application>, part of the GNOME-games suite of
+   games, is a relative of other disc-flipping games such as
+   <application>Iagno</application>.
+   <application>Gataxx</application>, however, begins at the corners,
+   rather than at the center of the board, and has slightly different
+   rules for adding and moving discs.
+  </para>
+
+  <para>
+   To run <application>Gataxx</application>, select
+   <guimenuitem>Gataxx</guimenuitem> from the
+   <guisubmenu>Games</guisubmenu> submenu of the <guimenu>Main
+   Menu</guimenu>, or type <command>gataxx</command> on the
+   command line. 
+  </para>
+
+  <para>
+   <application>Gataxx</application> is included in the
+   <filename>GNOME-games</filename> package, which is part of the
+   GNOME desktop environment. This document describes version
+   &version; of <application>Gataxx</application>.
+  </para>
+
+ </sect1>
+
+
+ <!-- ================ Usage ================================ -->
+ <!-- This section should describe basic usage of the application. -->
+
+  <sect1 id="usage">
+    <title>Playing Gataxx</title>
+    <para>
+      The basic rules of <application>Gataxx</application> are quite
+      easy to learn, especially if you are familiar with other
+      disc-flipping games.  The object of the game is to have more
+      discs of your color on the board than your opponent does.  The
+      game ends when the board is full or when one player has no discs
+      at all on the board.
+    </para>
+    <para>
+      Although <application>Gataxx</application> is a two player game,
+      one or both players can be controlled by the computer.
+  </para>
+
+
+  <!-- ========= Basic Usage =========================== -->
+  <sect2 id="mainwin">
+   <title>Basic usage</title>
+   <para>
+    Starting <application>Gataxx</application> presents you with the
+    <interface>game board</interface>, which is seven squares on a
+    side.  You can start a game by selecting <guimenuitem>New
+    Game</guimenuitem> from the <guimenu>Game</guimenu> menu.  A new
+    game is shown in <xref linkend="mainwindow-fig"/>.
+   </para>
+    <!-- ==== Figure ==== -->
+  
+
+  <figure id="mainwindow-fig">
+     <title>Gataxx Main Window</title>
+     <screenshot>
+       <mediaobject>
+         <imageobject>
+          <imagedata fileref="figures/gataxx-startgame" format="PNG"/>
+ </imageobject></mediaobject></screenshot></figure>
+
+    <!-- ==== End of Figure ==== -->
+
+
+  </sect2>
+
+
+  <!-- ========= Rulez =========================== -->
+
+    <sect2 id="rules"> 
+      <title>Basic Rules</title>
+      <para>
+        A game of <application>Gataxx</application> begins with four
+        pieces on the board: a dark colored piece in the upper left
+        and lower right corners, and a light colored piece in the
+        lower left and upper right corners.  Dark moves first; by
+        default, this player is human.
+      </para>
+      <para>
+        To make a move, click on one of your discs.  Available moves
+        for that disc will be outlined in white.  For a disc in the
+        middle of an unobstructed board, there are 24 possible moves,
+        illustrated in <xref linkend="moves-fig"/>.  Click on one of
+        the eight squares adjacent to the disc and you will add a new
+        disc to the board.  Click on one further away, and the disc
+        will move there, jumping any obstacles in its path.  You
+        cannot move a disc into an occupied square, nor can you remove
+        a disc from the board.
+      </para>
+      <para>
+        When you move or add a disc to a position adjacent to one or
+        more of your opponent's discs, you capture those discs.  When
+        you capture them they change color to indicate your
+        possession, and you can move them or add discs next to them as
+        you would any other disc in your possession.  This is good for
+        you and bad for your opponent.
+      </para>
+      <para>
+        This means that, strategically, an L-shaped formation of discs
+        is bad to have, because it allows an opponent to capture more
+        discs with a single move.  The worst sort of formation would
+        be donut-shaped, because it would allow the
+        capture of eight pieces at once.
+      </para>
+
+    <!-- ==== Figure ==== -->
+    <figure id="moves-fig">
+     <title>Available Moves</title>
+     <screenshot>
+      <mediaobject>
+       <imageobject>
+        <imagedata fileref="figures/gataxx-legalmoves" format="PNG"/>
+</imageobject></mediaobject>
+    </screenshot>
+    </figure>
+    <!-- ==== End of Figure ==== -->
+
+
+    </sect2>
+
+
+  <!-- ========= Menus =========================== -->
+  <sect2 id="menubar">
+   <title>Menus</title>
+   <para>
+    The menu bar, located at the top of the <interface>game 
+    board</interface>, contains the following menus:
+   </para>
+
+   <variablelist>
+    <varlistentry>
+     <term><guimenu>Game</guimenu></term>
+     <listitem>
+      <para>
+       This menu contains three items:
+      <itemizedlist>	
+	<listitem>
+	  <para>
+            <menuchoice> 
+	       <shortcut><keysym>Ctrl-N</keysym></shortcut>
+               <guimenuitem>New Game</guimenuitem>
+	    </menuchoice>
+           </para>
+         </listitem>     
+       
+	<listitem>
+	  <para>
+            <menuchoice>
+               <shortcut><keysym>Ctrl-Z</keysym></shortcut>
+               <guimenuitem>Undo Move</guimenuitem>
+            </menuchoice>
+        </para>
+       </listitem>
+
+       	<listitem>
+	<para>
+          <menuchoice>
+            <shortcut><keysym>Ctrl-Q</keysym></shortcut>
+            <guimenuitem>Exit</guimenuitem>
+          </menuchoice>
+        </para>
+       </listitem>
+     </itemizedlist>
+      </para>
+     </listitem>
+    </varlistentry>
+
+	<varlistentry>
+	  <term><guimenu>Settings</guimenu></term>
+	  <listitem>
+	    <para>
+              The <guimenu>Settings</guimenu> menu contains only one item:
+              <itemizedlist>
+		<listitem>
+		  <para>
+                   <guimenuitem>Preferences</guimenuitem>
+                    , which brings up the preferences dialog box.
+                  </para>
+		</listitem>
+	      </itemizedlist>
+            </para>
+	  </listitem>
+	</varlistentry>
+
+    <varlistentry>
+     <term><guimenu>Help</guimenu></term>
+     <listitem>
+      <para>
+       This menu contains:
+       <itemizedlist>
+        <listitem>
+         <para>
+          <guimenuitem>Manual</guimenuitem>&mdash;
+          shows this manual.
+         </para>
+        </listitem>
+
+        <listitem>
+         <para>
+          <guimenuitem>About</guimenuitem>&mdash; shows
+          basic information about
+          <application>Gataxx</application>, such as
+          the author's name and the application version number.
+         </para>
+        </listitem>
+       </itemizedlist>
+
+      </para>
+     </listitem>
+    </varlistentry>
+   </variablelist>
+  </sect2>
+ </sect1>
+
+
+ <!-- ============= Customization ============================= -->
+ <sect1 id="prefs">
+  <title>Customization</title>
+  <para>
+   To change the application settings, select
+   <guimenuitem>Preferences&hellip;</guimenuitem> from the
+   <guimenu>Settings</guimenu> menu. This opens the
+   <interface>Preferences</interface> dialog, shown in <xref linkend="preferences-fig"/>.
+  </para>
+
+  <figure id="preferences-fig">
+   <title>Preferences Dialog</title>
+   <screenshot>
+   <mediaobject>
+   <imageobject>
+     <imagedata fileref="figures/gataxx-prefs" format="PNG"/>
+</imageobject></mediaobject>
+   </screenshot>
+  </figure>
+
+  <para>
+   The properties in the <guilabel>Players</guilabel> tab are:
+   <itemizedlist>
+
+    <listitem>
+     <para>
+      <guilabel>Dark</guilabel> &mdash; Select the player who will
+      play the dark discs.  You may choose from a
+      <guilabel>Human</guilabel> player (i.e. you), or three levels of
+      computer ability (<guilabel>Level one</guilabel> (easy) through
+      <guilabel>Level three</guilabel> (difficult).
+     </para>
+    </listitem>
+
+    <listitem>
+     <para>
+      <guilabel>Light</guilabel> &mdash; Select the player who will
+      play the light discs.  You have the same options.  If both
+      players are computerized, you can watch the game played for you.
+     </para>
+    </listitem>
+
+    <listitem>
+     <para>
+      <guilabel>Quick Moves</guilabel> &mdash; If this box is checked,
+      the computer will not pretend to think about its turn, but will
+      make its move immediately.
+     </para>
+    </listitem>
+   </itemizedlist>
+  </para>
+
+  <para>
+   The properties in the <guilabel>Animation</guilabel> tab are:
+   <itemizedlist>
+
+    <listitem>
+     <para>
+      <guilabel>None</guilabel>&mdash; If this button is checked,
+      there will be no animation when discs change hands.
+     </para>
+    </listitem>
+
+    <listitem>
+     <para>
+      <guilabel>Partial</guilabel>&mdash; If this button is checked,
+      there will be some animation when discs change hands.
+     </para>
+    </listitem>
+
+    <listitem>
+     <para>
+      <guilabel>Complete</guilabel>&mdash; Select this button if you
+      want to see the discs turn over as they are captured.
+     </para>
+    </listitem>
+
+    <listitem>
+     <para>
+      Flip final results&mdash; Click this button if you want to see
+      the results of your game displayed in an attractive visual
+      format: all the dark pieces on the top and all the light ones on
+      the bottom.
+     </para>
+    </listitem>
+
+
+    <listitem>
+     <para>
+      Tile Set &mdash; Choose from one of several appearances for the
+      game.  The default is "classic."
+     </para>
+    </listitem>
+
+   </itemizedlist>
+
+
+  </para>
+
+  <para>
+    After you have made all the changes you want, click on
+    <guibutton>OK</guibutton> to apply the changes and close the
+    <interface>Properties</interface> dialog. To cancel the changes
+    and return to previous values, click the
+    <guibutton>Close</guibutton> button.
+  </para>
+
+  </sect1>
+
+
+
+
+ <!-- ============= Bugs ================================== -->
+ <!-- This section should describe known bugs and limitations of
+      the program if there are any - please be frank and list all
+      problems you know of -->
+ <sect1 id="bugs">
+  <title>Known Bugs and Limitations</title>
+  <para>
+   This application has no known bugs.
+  </para>
+ </sect1>
+
+
+<!-- ============= Authors ================================ -->
+
+ <sect1 id="authors">
+  <title>Authors</title>
+  <para>
+   <application>Gataxx</application> was written by Chris Rogers
+   (<email>gandalf@darkcorner.net</email>). To find more information about
+   <application>Gataxx</application>, please visit the <ulink url="http://www.darkcorner.net/projects/gataxx/" type="http">Gataxx Web
+   page</ulink>.  Please send all comments, suggestions, and bug
+   reports to the <ulink url="http://bugs.gnome.org" type="http">GNOME
+   bug tracking database</ulink>. (Instructions for submitting bug
+   reports can be found <ulink url="http://bugs.gnome.org/Reporting.html" type="http">
+   on-line</ulink>.) If you are using
+   GNOME 1.1 or later, you can also use <application>Bug Report
+   Tool</application> (<command>bug-buddy</command>), available in the
+   <guisubmenu>Utilities</guisubmenu> submenu of <guimenu>Main
+   Menu</guimenu>, for submitting bug reports.
+  </para>
+
+  <para>
+   This manual was written by Aaron Weber
+   (<email>aaron@helixcode.com</email>). Please send all comments and
+   suggestions regarding this manual to the <ulink url="http://www.gnome.org/gdp" type="http">GNOME Documentation Project</ulink> 
+   by sending an email to <email>docs@gnome.org</email>. You can also
+   add your comments online by using the <ulink url="http://www.gnome.org/gdp/doctable/" type="http">GNOME Documentation Status
+   Table</ulink>.
+  </para>
+
+  <!-- For translations: uncomment this:
+
+  <para>
+   Latin translation was done by ME
+   (<email>MYNAME@MYADDRESS</email>). Please send all  comments  and
+   suggestions regarding this translation to SOMEWHERE.
+  </para>
+
+  -->
+
+ </sect1>
+
+
+ <!-- ============= Application License ============================= -->
+
+ <sect1 id="license">
+  <title>License</title>
+  <para>
+   This program is free software; you can redistribute it and/or
+   modify it under the terms of the <citetitle>GNU General Public
+   License</citetitle> as published by the Free Software Foundation;
+   either version 2 of the License, or (at your option) any later
+   version.
+  </para>
+  <para>
+   This program is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   <citetitle>GNU General Public License</citetitle> for more details.
+  </para>
+  <para>
+   A copy of the <citetitle>GNU General Public License</citetitle> is
+   included as an appendix to the <citetitle>GNOME Users
+   Guide</citetitle>.  You may also obtain a copy of the
+   <citetitle>GNU General Public License</citetitle> from the Free
+   Software Foundation by visiting <ulink url="http://www.fsf.org" type="http">their Web site</ulink> or by writing to
+   <address>
+    Free Software Foundation, Inc.
+    <street>59 Temple Place</street> - Suite 330
+    <city>Boston</city>, <state>MA</state> <postcode>02111-1307</postcode>
+    <country>USA</country>
+   </address>
+  </para>
+ </sect1>
+</article>
+
+
+
+
